# cli_engineer

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  cli_engineer.toml
docs/: SUMMARY.md  agentic-loop.md  api-reference.md  architecture.md  code_of_conduct.md  command-reference.md  configuration.md  contributing.md  core_components.md  development.md  documentation-structure.md  index.md  llm_providers.md  quick_start.md  ui_and_logging.md  user-guide.md  user_guide.md
docs/components/: event-system.md
src/: agentic_loop.rs  artifact.rs  concurrency.rs  config.rs  context.rs  event_bus.rs  executor.rs  interpreter.rs  iteration_context.rs  llm_manager.rs  logger.rs  logger_dashboard.rs  main.rs  planner.rs  reviewer.rs  ui.rs  ui_dashboard.rs  ui_enhanced.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
