[package]
name = "cli_engineer"
version = "0.1.1"
edition = "2024"
description = "An autonomous CLI coding agent"
license = "MIT"
repository = "https://github.com/trilogy-group/cli_engineer"
authors = ["Leonardo Gonzalez <leonardo.gonzalez@trilogy.com>"]
keywords = ["cli", "agent", "coding", "autonomous", "llm"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "cli_engineer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
thiserror = "1.0"
log = "0.4"
simplelog = "0.12"
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
